--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,79 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: blueviolet;
+}
+.App{
+  text-align: center;
+  margin-top: 200px;
+  font-family: Arial, Helvetica, sans-serif;
+  
+ 
+}
+h1{
+  font-size: 3rem;
+  color: #fff;
+}
+.converter{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 80px;
+
+}
+input[type='number'],
+input[type='text'],
+select{
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  color: #fff;
+}
+input:focus{
+  outline: none;
+}
+select{
+  width: 100px;
+}
+select:focus{
+  outline: none;
+}
+.equals{
+  padding: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+}
+button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color:#c115b8;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button:hover {
+  background-color:#83007d ;
+}
+@media (max-width: 768px) {
+  h1{
+    font-size: 2rem;
+  }
+  .converter{
+    flex-direction: column;
+  }
+  input[type='number'],
+input[type='text'],
+select{
+  width: 60%;
+  font-size: 16px;
+}
+button{
+  margin-top: 20px;
+}
+
+
 }
